openmediavault (6.0.9-1) unstable; urgency=low

  *

 -- Volker Theile <volker.theile@openmediavault.org>  Wed, 12 Jan 2022 19:53:08 +0100

openmediavault (6.0.8-1) unstable; urgency=low

  * Various improvements.
  * Update locale files.
  * Add the ability to copy and apply the permissions of a shared
    folder to its ACL page.

 -- Volker Theile <volker.theile@openmediavault.org>  Wed, 12 Jan 2022 19:15:24 +0100

openmediavault (6.0.7-1) unstable; urgency=low

  * Update locale files.
  * Prevent the deactivation of SMART monitoring for devices
    that are connected to a scheduled job.
  * Replace the form input field 'Maximum file size' of the
    configuration of the recycle bin on the SMB shares page
    with a drop-down field for the sake of simplicity.
    Please check your settings because they are not migrated.
  * Issue #1165: Add recycle bin support for SMB home directories.

 -- Volker Theile <volker.theile@openmediavault.org>  Mon, 27 Dec 2021 21:37:01 +0100

openmediavault (6.0.6-1) unstable; urgency=low

  * Various improvements.
  * Fix PAM faillock issue related to missing directory.
  * Issue #618: Remove backslash in Monit notification email.
  * Issue #1159: Add enhanced server-side copy offload for SMB
    shares residing on BTRFS file systems.
  * Issue #1160: Improve S.M.A.R.T. overall status assessment.
  * Issue #1166: SMB user password is not updated.

 -- Volker Theile <volker.theile@openmediavault.org>  Sat, 04 Dec 2021 11:04:56 +0100

openmediavault (6.0.5-3) unstable; urgency=low

  * Update locale files.
  * Improved IPv6 detection. This will fix various issues, e.g.
    DNS issues and undeliverable emails with Postfix.
  * Issue #1151: Increase user password strength.

 -- Volker Theile <volker.theile@openmediavault.org>  Fri, 26 Nov 2021 13:15:00 +0100

openmediavault (6.0.4-3) unstable; urgency=low

  * Various improvements.
  * Fix lock file issue in SMB recycle dir script.