@@ -1,6 +1,7 @@
 openmediavault (6.0.9-1) unstable; urgency=low
 
-  *
+  * Issue #1181: Use 'Warning' color for SMART assessment status
+    'BAD_SECTOR'.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Wed, 12 Jan 2022 19:53:08 +0100
 
